; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_aas_main.c_AAS_StartFrame.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_aas_main.c_AAS_StartFrame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { float, i32, i64 }
%struct.TYPE_3__ = type { i64 }

@aasworld = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@bot_developer = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"showcacheupdates\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"showmemoryusage\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"memorydump\00", align 1
@saveroutingcache = common dso_local global %struct.TYPE_3__* null, align 8
@.str.4 = private unnamed_addr constant [17 x i8] c"saveroutingcache\00", align 1
@BLERR_NOERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AAS_StartFrame(float %0) #0 {
  %2 = alloca float, align 4
  store float %0, float* %2, align 4
  %3 = load float, float* %2, align 4
  store float %3, float* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aasworld, i32 0, i32 0), align 8
  %4 = call i32 (...) @AAS_UnlinkInvalidEntities()
  %5 = call i32 (...) @AAS_InvalidateEntities()
  %6 = load float, float* %2, align 4
  %7 = call i32 @AAS_ContinueInit(float %6)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aasworld, i32 0, i32 2), align 8
  %8 = load i64, i64* @bot_developer, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %1
  %11 = call i64 @LibVarGetValue(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = call i32 (...) @AAS_RoutingInfo()
  %15 = call i32 @LibVarSet(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %10
  %17 = call i64 @LibVarGetValue(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = call i32 (...) @PrintUsedMemorySize()
  %21 = call i32 @LibVarSet(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %19, %16
  %23 = call i64 @LibVarGetValue(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = call i32 (...) @PrintMemoryLabels()
  %27 = call i32 @LibVarSet(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %28

28:                                               ; preds = %25, %22
  br label %29

29:                                               ; preds = %28, %1
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** @saveroutingcache, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %29
  %35 = call i32 (...) @AAS_WriteRouteCache()
  %36 = call i32 @LibVarSet(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %37

37:                                               ; preds = %34, %29
  %38 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aasworld, i32 0, i32 1), align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aasworld, i32 0, i32 1), align 4
  %40 = load i32, i32* @BLERR_NOERROR, align 4
  ret i32 %40
}

declare dso_local i32 @AAS_UnlinkInvalidEntities(...) #1

declare dso_local i32 @AAS_InvalidateEntities(...) #1

declare dso_local i32 @AAS_ContinueInit(float) #1

declare dso_local i64 @LibVarGetValue(i8*) #1

declare dso_local i32 @AAS_RoutingInfo(...) #1

declare dso_local i32 @LibVarSet(i8*, i8*) #1

declare dso_local i32 @PrintUsedMemorySize(...) #1

declare dso_local i32 @PrintMemoryLabels(...) #1

declare dso_local i32 @AAS_WriteRouteCache(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
